<resources>
    <string name="app_name">EscapeTheCity</string>
    <string name="registration_title_register">Registro</string>
    <string name="registration_email">Email</string>
    <string name="registration_button_register">Registrar</string>
    <string name="registration_button_access">Acceder</string>
    <string name="access_title_access">Acceso</string>
    <string name="access_user">Usuario</string>
    <string name="access_email">Email</string>
    <string name="access_password">Contraseña</string>
    <string name="access_button_access">Acceder</string>
    <string name="access_button_remember">¿Olvidaste la contraseña?</string>
    <string name="recovery_title_recovery">Recuperar contraseña</string>
    <string name="recovery_email">Email</string>
    <string name="recovery_button_send">Enviar</string>
    <string name="recovery_button_access">Acceder</string>
    <string name="error_email_already_registered">El email ya está registrado</string>
    <string name="top_bar_tittle">Inicio</string>
    <string name="lateralmenu_open">Abriendo menú</string>
    <string name="lateralmenu_close">Cerrando menú</string>
    <string name="lateralmenu_profile">Perfil</string>
    <string name="lateralmenu_profile_image">xxx</string>
    <string name="lateralmenu_profile_name">username</string>
    <string name="lateralmenu_profile_email">user@email.com</string>
    <string name="lateralmenu_home">Inicio</string>
    <string name="lateralmenu_mygames">Mis juegos</string>
    <string name="lateralmenu_otheroptions">Opciones</string>
    <string name="lateralmenu_logout">Cerrar sesión</string>
    <string name="tv_h_escapeName">El Secreto</string>
    <string name="main_exit_title">Salir de la aplicación</string>
    <string name="main_exit_description">¿Desea cerrar y salir de esta aplicación?</string>
    <string name="main_exit_positive">Salir</string>
    <string name="main_exit_negative">Cancelar</string>
    <string name="tv_er_info">Información</string>
    <string name="tv_er_multirole">Crear Partida</string>
    <string name="tv_er_achievements">Logros</string>
    <string name="tv_er_ranking">Ranking</string>
    <string name="tv_er_information_city_title">Ciudad:</string>
    <string name="tv_er_information_city">tv_er_information_city</string>
    <string name="tv_er_information_time_title">Tiempo:</string>
    <string name="tv_er_information_time">tv_er_information_time</string>
    <string name="tv_er_information_time_unit">Minutos</string>
    <string name="tv_er_information_difficulty_title">Dificultad:</string>
    <string name="tv_er_information_difficulty">tv_er_information_difficulty</string>
    <string name="tv_er_information_description_title">Descripción:</string>
    <string name="tv_er_information_description">tv_er_information_description</string>
    <string name="tv_achievement_name">Example of achievement</string>
    <string name="tv_er_achievemnts_not_achieved">No has conseguido este logro</string>
    <string name="tv_er_ranking_position">Nº</string>
    <string name="tv_er_ranking_username">Usuario</string>
    <string name="tv_er_ranking_points">Puntos</string>
    <string name="tv_er_ranking_titleposition">Tu puntuación:</string>
    <string name="tv_er_ranking_user_position">...</string>
    <string name="b_er_multirole_group">Grupos</string>
    <string name="tv_er_multirole_group_title">Tu grupo es:</string>
    <string name="tv_multirole_settings">Ajustes:</string>
    <string name="tv_multirole_settings_time">Límite de tiempo:</string>
    <string name="b_multirole_y">Si</string>
    <string name="b_multirole_n">No</string>
    <string name="tv_multirole_settings_date">Fecha prevista de inicio:</string>
    <string name="b_multirole_date">Selección de fecha</string>
    <string name="b_multirole_confirmation">Crear</string>
    <string name="toast_er_multirole_not_date">Por favor, seleccione una fecha posterior a la fecha actual</string>
    <string name="toast_er_multirole_not_timer">Por favor, seleccione una opción en el limitador de tiempo</string>
    <string name="tv_er_status">Estado</string>
    <string name="b_er_status_start">Empezar</string>
    <string name="b_er_status_cancel">Cancelar</string>
    <string name="tv_er_status_check_maps">Ver en Google Maps</string>
    <string name="tv_er_status_check_maps_name">Empezar+el+juego+aquí</string>
    <string name="tv_er_status_description_before_start_title">¡La sesión ha sido creada!</string>
    <string name="tv_er_status_description_before_start_subtitle">Tu desafío comenzará pronto</string>
    <string name="tv_er_status_description_after_start_title">¡Ya puedes comenzar tu aventura!</string>
    <string name="tv_er_status_description_after_start_subtitle">¿Estás listo? \n Diríjete a la siguiente dirección y pulsa el botón de empezar</string>
    <string name="tv_er_status_cancel_game_title">Cancelar el juego</string>
    <string name="tv_er_status_cancel_game_description">¿Desea cancelar la reserva del juego?</string>
    <string name="tv_er_status_game">Partida:</string>
    <string name="tv_er_status_date">Fecha:</string>
    <string name="tv_er_status_time">Hora:</string>
    <string name="tv_game_investigation">Investigación</string>
    <string name="tv_game_map">Mapa</string>
    <string name="tv_game_inventory">Inventario</string>
    <string name="tv_game_logbook">Bitácora</string>
    <string name="tv_game_options">Opciones</string>
    <string name="tv_game_timer">Tiempo</string>
    <string name="tv_game_gps_dialog_title">Acceso a la ubicación</string>
    <string name="tv_game_gps_dialog_message">Esta aplicación requiere acceso a la ubicación</string>
    <string name="tv_game_gps_dialog_confirm">Activar</string>
    <string name="tv_game_gps_dialog_cancel">Ignorar</string>
    <string name="tv_game_options_cancel">Finalizar Juego</string>
    <string name="tv_game_options_confirmation_message">¿Desea finalizar el juego y volver a la vista del escape room?</string>
    <string name="tv_game_options_confirmation_yes">Si</string>
    <string name="tv_game_options_confirmation_no">No</string>
    <string name="tv_game_investigation_title">tv_game_investigation_title</string>
    <string name="tv_game_investigation_description">tv_game_investigation_description</string>
    <string name="b_game_investigation_clues">Pistas</string>
    <string name="b_game_investigation_solve">Resolver</string>
    <string name="tv_game_investigation_clues_description">¡Aviso! \n Las pistas seleccionadas restarán puntos al valor total de la prueba</string>
    <string name="cb_game_investigation_clue1">Pista 1</string>
    <string name="cb_game_investigation_clue2">Pista 2</string>
    <string name="cb_game_investigation_clue3">Pista 3</string>
    <string name="tv_game_investigation_clue1_description"> - Description 1</string>
    <string name="tv_game_investigation_clue2_description"> - Description 2</string>
    <string name="tv_game_investigation_clue3_description"> - Description 3</string>
    <string name="b_game_investigation_end">Finalizar\n Prueba</string>
    <string name="tv_game_investigation_end_confirmation_title">Finalizar la prueba</string>
    <string name="tv_game_investigation_end_confirmation_message">¿Desea finalizar esta prueba?</string>
    <string name="tv_game_investigation_check_title">Introduce la respuesta</string>
    <string name="et_game_investigation_check_hint">Hint</string>
    <string name="b_game_investigation_check">Comprobar</string>
    <string name="b_game_investigation_goBack">Volver</string>
    <string name="tv_game_investigation_correct_continue">¡Bien hecho!</string>
    <string name="tv_game_investigation_correct_continue_subtitle">A por la siguiente prueba</string>
    <string name="b_game_investigation_correct_continue">Continuar</string>
    <string name="tv_game_investigation_correct_end">¡Lo has logrado! Has terminado el juego</string>
    <string name="b_game_investigation_correct_end">Terminar</string>
    <string name="tv_game_investigation_incorrect">¡Ops ... esa no era la respuesta!</string>
    <string name="b_game_investigation_get_achievement">¡Has obtenido un logro!</string>
    <string name="b_game_investigation_get_item">¡Has obtenido un objeto!</string>
    <string name="b_game_map_finish">Ya has completado la escape room</string>
    <string name="tv_game_inventory_title">Inventario</string>
    <string name="tv_game_item_name">tv_game_item_name</string>
    <string name="b_game_item_use">Usar en prueba actual</string>
    <string name="b_game_item_use_already">Ya has usado el objeto</string>
    <string name="b_game_item_use_not_correct_for_trial">No has usado el item correcto</string>
    <string name="b_game_item_use_trial_not_require">Esta prueba no requiere un objeto</string>
    <string name="log_game_item_use_title">Has usado el objeto: </string>
    <string name="log_game_item_use_desc">Se ha usado un objeto en la prueba actual</string>
    <string name="toast_game_item_used">Has usado el objeto: </string>
    <string name="tv_game_inventory_timer_finalized">¡El tiempo se ha terminado!</string>
    <string name="tv_game_logbook_title_points">Puntos obtenidos: </string>
    <string name="tv_game_userlog_title_SER">"Empieza el juego"</string>
    <string name="tv_game_userlog_desc_SER">El usuario ha iniciado el juego.</string>
    <string name="tv_game_userlog_title_EER">"Finalizó el juego"</string>
    <string name="tv_game_userlog_desc_EER">El juego se ha terminado.</string>
    <string name="tv_game_userlog_title_FT">"Finalizó la prueba: "</string>
    <string name="tv_game_userlog_desc_FT">El usuario completó la prueba.</string>
    <string name="tv_game_userlog_title_FFT">"Finalizó la prueba: "</string>
    <string name="tv_game_userlog_desc_FFT">El usuario ha finalizado la prueba.</string>
    <string name="tv_game_userlog_title_GI">"Item encontrado: "</string>
    <string name="tv_game_userlog_desc_GI">El usuario ha encontrado un item en la prueba.</string>
    <string name="tv_game_userlog_title_UI">"Item usado: "</string>
    <string name="tv_game_userlog_desc_UI">El usuario ha usado un item en la prueba.</string>
    <string name="tv_game_userlog_title_GA">"Logro desbloqueado: "</string>
    <string name="tv_game_userlog_desc_GA">El usuario ha desbloqueado un logro en la prueba.</string>
    <string name="tv_game_userlog_title_UC">"Pista usada: "</string>
    <string name="tv_game_userlog_desc_UC">El usuario ha requerido una pista en la prueba.</string>
</resources>