<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    Internal menu -->
    <group>
        <item android:id="@+id/lateralmenu_home"
            android:title="@string/lateralmenu_home"
            android:icon="@drawable/icon_lm_home" />
        <item android:id="@+id/lateralmenu_mygames"
            android:title="@string/lateralmenu_mygames"
            android:icon="@drawable/icon_lm_mygames"
            />

    </group>

<!--    Logout, help or others-->
    <item android:title="@string/lateralmenu_otheroptions">
        <menu>
            <item android:id="@+id/lateralmenu_logout_button"
                android:title="@string/lateralmenu_logout"
                android:icon="@drawable/icon_lm_logout" />

        </menu>
    </item>

</menu>