<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/escape_carbon"
    >


    <TextView
        android:id="@+id/tvAccess"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:text="@string/access_title_access"
        android:textColor="@color/escape_purple"
        android:textSize="60dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/access_email"/>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/access_password"/>

    <Button
        android:id="@+id/bAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="40dp"
        android:onClick="login"
        android:text="@string/access_button_access" />

    <TextView
        android:id="@+id/etForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="forgotPass"
        android:layout_gravity="center"
        android:textColor="@color/escape_dead_purple_noir"
        android:textSize="18dp"
        android:text="@string/access_button_remember" />

</LinearLayout>