<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_game_investigation_popup_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--        Response Title-->
        <TextView
            android:id="@+id/tv_game_investigation_check_title"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/b_game_investigation_clues" />

        <TextView
            android:id="@+id/tv_game_investigation_clues_description"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/tv_game_investigation_clues_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            Clue 1-->
            <CheckBox
                android:id="@+id/cb_game_investigation_clue1"
                android:tag="cb_game_investigation_clue1"
                android:onClick="selectActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_game_investigation_clue1"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/tv_game_investigation_clue1_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_game_investigation_clue1_description"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"/>

            <!--            Clue 2-->
            <CheckBox
                android:id="@+id/cb_game_investigation_clue2"
                android:tag="cb_game_investigation_clue2"
                android:onClick="selectActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_game_investigation_clue2"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/tv_game_investigation_clue2_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_game_investigation_clue2_description"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"/>

            <!--            Clue 3-->
            <CheckBox
                android:id="@+id/cb_game_investigation_clue3"
                android:tag="cb_game_investigation_clue3"
                android:onClick="selectActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_game_investigation_clue3"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/tv_game_investigation_clue3_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_game_investigation_clue3_description"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"/>



        </LinearLayout>


        <!--        Buttons PopUp Tips-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <!--            End Trial-->
            <Button
                android:id="@+id/b_game_investigation_end"
                android:tag="b_game_investigation_end"
                android:onClick="selectActions"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textSize="20dp"

                android:text="@string/b_game_investigation_end"/>

            <!--            Go back-->
            <Button
                android:tag="b_game_investigation_goBack"
                android:onClick="selectActions"                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:text="@string/b_game_investigation_goBack"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>