<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ERCreateJoinActivity"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    tools:openDrawer="start">

    <LinearLayout
        android:paddingTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_goBack"
                android:onClick="er_actions"
                android:tag="goBack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/icon_goback"
                android:scaleType="fitCenter"
                android:background="@null"
                android:layout_weight=".8"/>


            <TextView
                android:id="@+id/tv_er_description"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:textSize="30dp"
                android:text="@string/tv_er_multirole" />

        </LinearLayout>

        <!-- Features of this view -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <Button
                    android:tag="b_er_groups"
                    android:onClick="er_actions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:text="@string/b_er_multirole_group"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_er_multirole_group_title"
                    android:textAlignment="center"
                    android:textSize="30dp"/>

                <TextView
                    android:id="@+id/tv_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:background="@color/escape_back_light_purple"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_multirole_settings"
                    android:textSize="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:text="@string/tv_multirole_settings_time"
                    android:textSize="30dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/b_er_time_yes"
                        android:tag="b_er_time_yes"
                        android:onClick="er_actions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:textAllCaps="false"
                        android:textSize="20dp"
                        android:text="@string/b_multirole_y"
                        android:backgroundTint="@color/escape_vivid_purple"/>

                    <Button
                        android:id="@+id/b_er_time_no"
                        android:tag="b_er_time_no"
                        android:onClick="er_actions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:textSize="20dp"
                        android:text="@string/b_multirole_n"
                        android:backgroundTint="@color/escape_vivid_purple"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:text="@string/tv_multirole_settings_date"
                    android:textSize="30dp"/>

                <Button
                    android:tag="b_er_date_selection"
                    android:onClick="er_actions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:text="@string/b_multirole_date"/>


                <TextView
                    android:id="@+id/tv_group_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:background="@color/escape_back_light_purple"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="30dp"/>

                <Button
                    android:tag="b_er_confirmation"
                    android:onClick="er_actions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:text="@string/b_multirole_confirmation"/>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>




    <!--    Top bar that supports lateral menu-->
    <include
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <!--    Lateral menu-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/lateralview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:translationZ="1dp"
        app:menu="@menu/lateral_menu_resources"
        />


</androidx.drawerlayout.widget.DrawerLayout>