<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/escape_back_light_purple"
        android:layout_marginVertical="6dp"
        >
                <TextView
                    android:id="@+id/tv_er_ranking_position"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_er_ranking_position"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:layout_weight="0.2"
                    />

                <TextView
                    android:id="@+id/tv_er_ranking_username"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/tv_er_ranking_username"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:id="@+id/tv_er_ranking_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_er_ranking_points"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:layout_weight="0.2"
                    />

    </LinearLayout>
</androidx.cardview.widget.CardView>